echo-app/echo-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: echo-app-ns
  name: echo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: echo-app.ingress.test
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-webapp-svc
            port:
              number: 9000
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-api-svc
            port:
              number: 8080
